<resources>
    <string name="app_name">Things - The App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_min_3_favorite_teams">(Choose Min 3 Favorite Teams)</string>
    <string name="your_favorite_teams">Your Favorite Teams</string>
    <string name="most_favorite_team">Most Favorite Team:</string>
</resources>